fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -75,9 +75,14 @@ img {
   display: flex;
 }
 
-body {
+* {
   justify-content: center;
 }
+
+body {
+  overflow-x: hidden;
+}
+
 
 .section-title {
   position: relative;
@@ -151,6 +156,10 @@ body {
   margin: 1rem;
 }
 
+.footer {
+  overflow-x:hidden;
+}
+
 .nav__menu {
   /* padding-top: 2rem; */
   height: 100%;
@@ -185,7 +194,7 @@ body {
 .nav__toggle {
   position: absolute;
   top: .65rem;
-  right: .6rem;
+  right: 1rem;
   display: none;
   flex-direction: column;
   justify-content: space-between;
@@ -208,10 +217,12 @@ body {
   .nav__toggle {
     display: flex;
   }
+
   .nav__menu {
+    /* height: 100%; */
     display: none;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 2rem;
     z-index: 2;
   }
   .nav__menu ul {
@@ -422,6 +433,7 @@ body {
 
 /* ===== SKILLS =====*/
 
+
 .p_container {
   row-gap: 2rem;
   text-align: center;
@@ -443,12 +455,9 @@ body {
 }
 
 .skills__data {
-  /* display: flex; */
   justify-content: space-between;
   align-items: center;
   position: relative;
-  /* width: 11rem; */
-  /* height: 3rem; */
   font-weight: bold;
   padding: .5rem.75rem;
   margin: 3rem;
@@ -487,6 +496,8 @@ body {
 .skills__img {
   border-radius: .5rem;
 }
+
+
 
 /* Projects */
 
@@ -609,7 +620,7 @@ body {
 
 #skills {
   position: relative;
-  margin-bottom: 200px;
+  margin-bottom: 3rem;
 }
 
 /* FOOTER */
